% borrowed some formatting from
% http://svn.r-project.org/R/trunk/doc/NEWS.Rd
% -*- coding: utf-8 -*-
%%\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}
%%\newcommand{\Rlogo}{\if{html}{\figure{../../html/logo.jpg}}\if{latex}{\figure{logo.jpg}{options:
%width=0.5in}}}
\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%\code{} or \Code{}?

\name{strain}
\title{News for package 'strain'}
\encoding{UTF-8}

\section{CHANGES in strain VERSION 0.1-1 (2013-07-01)}{
  \itemize{
    \item First version, a very crude one at that.
  }
}