@@ -9,3 +9,4 @@ strain.Rproj
 .RData
 ????.ALL_??.?.txt
 packrat/lib*/
+*.swp
