@@ -1,8 +1,8 @@
 Package: strain
 Type: Package
 Title: Tools for working with strainmeter and pore-fluid pressure data
-Version: 0.1-7
-Date: 2014-03-22
+Version: 0.2-1
+Date: 2014-08-22
 Author: Andrew J. Barbour
 Maintainer: Andrew J. Barbour <andy.barbour@gmail.com>
 License: GPL (>= 2)
