@@ -44,6 +44,7 @@ S3method(rotate,default)
 S3method(strains,bsm)
 S3method(unlinearize,default)
 export(.az_wrap)
+export(CoulombStress)
 export(as.bsm)
 export(calibMatrix)
 export(calibrate)
@@ -77,10 +78,13 @@ export(minfilt)
 export(orientation_conventions)
 export(plot_gaugeline)
 export(plot_orientations)
+export(principal_stresses)
 export(principals)
+export(projection_matrix)
 export(rotate)
 export(strain_azimuth)
 export(strains)
+export(stresses)
 export(unlinearize)
 import(corpcor)
 import(lubridate)
