@@ -8,6 +8,8 @@ Classes/Methods:
 	*** e.g. roel10.I, roel10.II
 
 Functions:
+  [ ] Verify CoulombStress output
+
 	[ ] A function to list available calibrations for a station name
 	> list_calibrations(sta4)
 	[1] "B084" "surf" "ertid" "pbou" "hodg13.ANC34"
